New: added function to execute rq queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ botContext.impl=mongoBotContext
 # The following attributes are only necessary if mongoBotContext is chosen
 botContext.mongodb.user=won
 botContext.mongodb.pass=won
-botContext.mongodb.host=localhost
+botContext.mongodb.host=192.168.43.94
 botContext.mongodb.port=27017
 botContext.mongodb.database=won
 # ########################################################################
